@@ -332,7 +332,7 @@ Themes =
     'Custom CSS'                  : '#qp div.post{background-color:rgba(0,0,0,0.8);border-radius:4px;border: 1px solid #333;}#qr {background-color: rgba(0,0,0,0.7);border: 1px solid #333;}'
   'PaisleyChan':
     'Author'                      : 'Ubuntufriend',
-    'Author Tripcode'             : '',
+    'Author Tripcode'             : '!TRip.C0d3',
     'Background Image'            : 'url(http://i.imgur.com/DRaZf.jpg)',
     'Background Attachment'       : 'fixed',
     'Background Position'         : '',
@@ -480,6 +480,56 @@ Themes =
     'Shadow Color'                : 'rgba(60,60,60,0.6)',
     'Dark Theme'                  : '1',
     'Custom CSS'                  : '.replyContainer > .reply {background-color: transparent;} body { background: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAIQAAACEAQMAAABrihHkAAAABlBMVEX///8AAABVwtN+AAAAAnRSTlMASuCaZbYAAAA+SURBVHhe7c2xCQAgDAXRKywsHcFRdDNxchtBkhHk4Lp88ui7hhaztBCkyYZ7fFHzI/Jk/GRpaWlpaWlpaR3scHNQSY3kigAAAABJRU5ErkJggg=="), -moz-radial-gradient(rgb(190,0,0), rgb(15,0,0)); background: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAIQAAACEAQMAAABrihHkAAAABlBMVEX///8AAABVwtN+AAAAAnRSTlMASuCaZbYAAAA+SURBVHhe7c2xCQAgDAXRKywsHcFRdDNxchtBkhHk4Lp88ui7hhaztBCkyYZ7fFHzI/Jk/GRpaWlpaWlpaR3scHNQSY3kigAAAABJRU5ErkJggg=="), -webkit-radial-gradient(rgb(190,0,0), rgb(15,0,0)); background-repeat: repeat, no-repeat !important; background-attachment: scroll, fixed !important; background-position: center, center !important;} #boardNavDesktop, .pages { background-color: rgba(0,0,0,0.7); } #boardNavDesktopFoot, #watcher, #watcher:hover, .deleteform { background-color: rgba(238,242,255,1); } div.reply { border: 0; border-bottom: 1px #ccc solid;} #qp div.post { background-color: rgba(0,0,0,0.7); border-color: rgba(0,0,0,0.7); } #qp div.post, #qp .postNum a { color: #fcd; } #qp .nameBlock > .useremail > .name, #qp .nameBlock > .useremail > .postertrip, #qp .name, #qp .postertrip, #qp .trip { color: #ffaac0; } #qp a { color: #aaaac8; } .boardBanner a, #qp a.backlink, #qp span.quote > a.quotelink { color: rgb(255,255,255); } #updater:not(:hover), #updater:not(:hover) #count:not(.new)::after, #stats { color: rgb(123,123,123); } .boardBanner {color: rgb(238,187,204)} .boardTitle { text-shadow: 1px 1px 1px #222; } #delform { background: -moz-linear-gradient(rgb(220,210,210), rgb(240,240,240) 400px); background: -webkit-linear-gradient(rgb(220,210,210), rgb(240,240,240) 400px); -o-linear-gradient(rgb(220,210,210), rgb(240,240,240) 400px); padding: 1px 15px 2px 15px; box-shadow: 0 20px 15px 20px rgba(0,0,0,0.7); border-radius: 4px; } #qr::before {color: #000;}'
+  'Solarized':
+    'Author'                      : 'ubuntufriend',
+    'Author Tripcode'             : '!TRip.C0d',
+    'Background Image'            : '',
+    'Background Attachment'       : '',
+    'Background Position'         : '',
+    'Background Repeat'           : '',
+    'Background Color'            : 'rgba(7,54,66,1)',
+    'Dialog Background'           : 'rgba(0,43,54,1)',
+    'Dialog Border'               : 'rgba(0,43,54,1)',
+    'Thread Wrapper Background'   : 'rgba(0,0,0,0)',
+    'Thread Wrapper Border'       : 'rgba(0,0,0,0)',
+    'Reply Background'            : 'rgba(0,43,54,1)',
+    'Reply Border'                : 'rgba(0,43,54,1)',
+    'Highlighted Reply Background': 'rgba(7,54,66,1)',
+    'Highlighted Reply Border'    : 'rgba(7,54,66,1)',
+    'Backlinked Reply Outline'    : 'rgba(98,124,141,1)',
+    'Checkbox Background'         : 'rgba(88,110,117,1)',
+    'Checkbox Border'             : 'rgba(88,110,117,1)',
+    'Checkbox Checked Background' : 'rgba(17,17,17,1)',
+    'Input Background'            : 'rgba(0,43,54,1)',
+    'Input Border'                : 'rgba(0,43,54,1)',
+    'Hovered Input Background'    : 'rgba(7,54,66,1)',
+    'Hovered Input Border'        : 'rgba(7,54,66,1)',
+    'Focused Input Background'    : 'rgba(7,54,66,1)',
+    'Focused Input Border'        : 'rgba(7,54,66,1)',
+    'Buttons Background'          : 'rgba(0,43,54,1)',
+    'Buttons Border'              : 'rgba(0,43,54,1)',
+    'Navigation Background'       : 'rgba(7,54,66,1)',
+    'Navigation Border'           : 'rgba(7,54,66,1)',
+    'Links'                       : 'rgb(108,113,196)',
+    'Hovered Links'               : 'rgb(211,54,130)',
+    'Navigation Links'            : 'rgb(147,161,161)',
+    'Hovered Navigation Links'    : 'rgb(211,54,130)',
+    'Subjects'                    : 'rgb(203,75,22)',
+    'Names'                       : 'rgb(88,110,117)',
+    'Sage'                        : 'rgb(108,113,196)',
+    'Tripcodes'                   : 'rgb(42,161,152)',
+    'Emails'                      : 'rgb(108,113,196)',
+    'Post Numbers'                : 'rgb(147,161,161)',
+    'Text'                        : 'rgb(147,161,161)',
+    'Backlinks'                   : 'rgb(79,95,143)',
+    'Greentext'                   : 'rgb(133,153,0)',
+    'Board Title'                 : 'rgb(147,161,161)',
+    'Timestamps'                  : 'rgb(147,161,161)',
+    'Inputs'                      : 'rgb(147,161,161)',
+    'Warnings'                    : 'rbg(108,113,196)',
+    'Shadow Color'                : 'rgba(0,0,0,0.4)',
+    'Dark Theme'                  : '1',
+    'Custom CSS'                  : '#qp div.post{background-color:rgba(7,54,66,0.9);border:1px solid rgba(79,95,143,0.9);}'
   'Zenburned':
     'Author'                      : 'lazy',
     'Author Tripcode'             : '!HONKYn7h1.',
