@@ -1,4 +1,6 @@
 master
+- Zixaphir
+  New Theme: Solarized
 
 0.7.3beta
 - Zixaphir
